# charming-with-claude

./: .gitignore  CLAUDE.md  LICENSE  README.md  READTHEM.md  feed.rss  generate_rss.py  skills
experiments/2026-03-13-code-review-skills-our-data/charming-analysis/review-tool/: .fuse_hidden00009d7b00000060  .fuse_hidden00009d960000006d  .fuse_hidden00009dd90000007e  .fuse_hidden0000bb1c000000d9  .fuse_hidden0000bb1d000000da  .fuse_hidden0000bb24000000de  .fuse_hidden0000bb36000000e8  .fuse_hidden0000bb3a000000eb  .fuse_hidden0000bb64000000fc  .fuse_hidden0000e0090000013b  .fuse_hidden0000e03c0000014f  .fuse_hidden0000e05c0000015a  .fuse_hidden0000e08d0000016f  .fuse_hidden0000e09100000172  .fuse_hidden0000e0c700000185  .fuse_hidden0000e0cb00000188  .gitignore  Makefile  README.md  pyproject.toml  review.db  review.db.backup-round4  review.db.backup-round5  review.db.backup-round6  review.db.backup-round7  review.db.backup-round8  (+1 more)
experiments/2026-03-26-llms-txt-docs-experiment/: README.md  build-manifest.json  gold-standards.md  infrastructure.md  pyproject.toml
experiments/2026-03-26-llms-txt-docs-experiment/infra/: disable-local-docs.sh  enable-local-docs.sh  nginx-charm-docs.conf  setup.sh
experiments/2026-03-26-llms-txt-docs-experiment/results/: analysis-265.md  analysis-432.md  analysis-final-with-E.md  analysis-final.md  analysis-v2.md  checkpoint-final.md  checkpoint.md  findings-notes.md  pilot-analysis.md
experiments/2026-03-26-llms-txt-docs-experiment/scripts/: analyse_results.py  questions.json  review_tool.py  run_experiment.py  score_responses.py
(+3342 files in other folders)
