[project]
name = "llms-txt-experiment"
version = "0.1.0"
description = "Tools for the llms.txt docs experiment"
requires-python = ">=3.12"
dependencies = [
    "textual~=1.0",
]

[tool.uv]
# Create venv with: uv venv && uv pip install -e .
# Or if the experiment dir has filesystem issues:
#   uv venv /tmp/llms-experiment-venv
#   source /tmp/llms-experiment-venv/bin/activate
#   uv pip install textual
