[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-tool"
version = "0.1.0"
description = "Bug finding review tool for charm-find-bugs skill validation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "pygments>=2.17.0",
    "python-multipart>=0.0.6",
    "markdown>=3.5.0",
    "textual>=0.75.0",
]

[project.scripts]
review-tool = "review_tool.cli:cli"
